low contrast a11y issue fixed for about me button

--- a/src/features/About/about.module.scss
+++ b/src/features/About/about.module.scss
@@ -49,8 +49,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #6ca22d;
-    color: var(--text-color) !important;
+    background-color: #76ba2e;
+    color: black !important;
     font-weight: bold;
     text-decoration: none;
     border-radius: 4px;
@@ -61,7 +61,8 @@
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 
     &:hover {
-        background-color: #77aa40;
+        background-color: #8dca4c;
+        color: black !important;
     }
 }
 
